@@ -2,8 +2,12 @@ package world.bentobox.aoneblock.dataobjects;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.apache.commons.text.StringEscapeUtils;
+/**
+ * @author tastybento
+ *
+ */
 import org.bukkit.entity.EntityType;
 import org.eclipse.jdt.annotation.NonNull;
 
@@ -13,21 +17,30 @@ import world.bentobox.aoneblock.oneblocks.OneBlockObject;
 import world.bentobox.bentobox.database.objects.DataObject;
 import world.bentobox.bentobox.database.objects.Table;
 
-/**
- * @author tastybento
- *
- */
 @Table(name = "OneBlockIslands")
 public class OneBlockIslands implements DataObject {
 
     @Expose
     private String uniqueId;
+    /**
+     * The number of blocks broken in the current loop
+     */
     @Expose
     private int blockNumber;
+    /**
+     * The lifetime number of blocks broken not including the current blockNumber.
+     * This is unfortunately for backwards compatibility reasons.
+     */
     @Expose
     private long lifetime;
+    /**
+     * Current phase number
+     */
     @Expose
     private String phaseName = "";
+    /**
+     * Hologram text to show
+     */
     @Expose
     private String hologram = "";
 
@@ -70,21 +83,26 @@ public class OneBlockIslands implements DataObject {
      * Increments the block number
      */
     public void incrementBlockNumber() {
+        // Ensure that lifetime is always at least blockNumber
+        if (this.lifetime < this.blockNumber) {
+            this.lifetime = this.blockNumber;
+        }
         this.blockNumber++;
+        this.lifetime++;
     }
 
     /**
      * @return the hologram Line
      */
     public String getHologram() {
-        return hologram;
+        return hologram == null ? "" : StringEscapeUtils.unescapeJava(hologram);
     }
 
     /**
      * @param hologramLine Hologram line
      */
     public void setHologram(String hologramLine) {
-        this.hologram = hologramLine;
+        this.hologram = StringEscapeUtils.escapeJava(hologramLine);
     }
 
     /* (non-Javadoc)
@@ -117,7 +135,7 @@ public class OneBlockIslands implements DataObject {
      * @return list of upcoming mobs
      */
     public List<EntityType> getNearestMob(int i) {
-        return getQueue().stream().limit(i).filter(OneBlockObject::isEntity).map(OneBlockObject::getEntityType).collect(Collectors.toList());
+        return getQueue().stream().limit(i).filter(OneBlockObject::isEntity).map(OneBlockObject::getEntityType).toList();
     }
 
     public void add(OneBlockObject nextBlock) {
@@ -140,17 +158,21 @@ public class OneBlockIslands implements DataObject {
     }
 
     /**
-     * @return the loops
+     * @return the lifetime number of blocks broken not including the current block count
      */
     public long getLifetime() {
+        // Ensure that lifetime is always at least blockNumber
+        if (this.lifetime < this.blockNumber) {
+            this.lifetime = this.blockNumber;
+        }
         return lifetime;
     }
 
     /**
-     * @param loops the loops to set
+     * @param the lifetime number of blocks broken to set
      */
-    public void setLifetime(long loops) {
-        this.lifetime = loops;
+    public void setLifetime(long lifetime) {
+        this.lifetime = lifetime;
     }
 
 
